--- a/html/latex.html
+++ b/html/latex.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
         <script type="text/javascript"
                 src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_CHTML"></script>
